--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,53 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+     <header>
+       <nav class="navbar navbar-expand-lg">
+         <div class="container border-bottom">
+           <a class="navbar-brand" href="/">
+              <span>LOGO</span>
+           </a>
+           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto">
+                <% if customer_signed_in? %>
+                  <button class="btn btn-sm btn-outline-secondary" type="button">
+                    <%= link_to "マイページ", customer_path %>
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button">
+                    <%= link_to "商品一覧", items_path %>
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button">
+                    <%= link_to "カート", cart_items_path %>
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button">
+                    <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+                  </button>
+                <% else %>
+                  <button class="btn btn-sm btn-outline-secondary" type="button">
+                    <%= link_to "about", homes_about_path %>
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button">
+                    <%= link_to "商品一覧", items_path %>
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button">
+                    <%= link_to "新規登録", new_customer_registration_path %>
+                  </button>
+                  <button class="btn btn-sm btn-outline-secondary" type="button">
+                    <%= link_to "ログイン", new_customer_session_path %>
+                  </button>
+                <% end %>
+              </ul>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
   </body>
 </html>
