--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
                     <%= link_to "マイページ", customer_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
-                    <%= link_to "商品一覧", items_path %>
+                    <%= link_to "商品一覧", public_items_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
                     <%= link_to "カート", cart_items_path %>
@@ -40,7 +40,7 @@
                     <%= link_to "about", homes_about_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
-                    <%= link_to "商品一覧", items_path %>
+                    <%= link_to "商品一覧", public_items_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
                     <%= link_to "新規登録", new_customer_registration_path %>
