--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -33,13 +33,13 @@
         <%= f.label :（セイ）,class:"float-right", style:"p-0" %>
       </div>
       <div class="col-3">
-        <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", placeholder:"レイワ", style: "width: 100%;" %>
+        <%= f.text_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana", placeholder:"レイワ", style: "width: 100%;" %>
       </div>
       <div class="col-2">
         <%= f.label :（メイ）,class:"float-right", style:"p-0" %>
       </div>
       <div class="col-3">
-        <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", placeholder:"ミチコ", style: "width: 100%;" %>
+        <%= f.text_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana", placeholder:"ミチコ", style: "width: 100%;" %>
       </div>
   </div>
 
