--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,13 @@
               <ul class="navbar-nav ml-auto">
                 <% if customer_signed_in? %>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
-                    <%= link_to "マイページ", customer_path %>
+                    <%= link_to "マイページ",public_customers_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
                     <%= link_to "商品一覧", public_items_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
-                    <%= link_to "カート", cart_items_path %>
+                    <%= link_to "カート", public_cart_items_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
                     <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
