--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,2 +1,90 @@
-<h1>Public::Customers#show</h1>
-<p>Find me in app/views/public/customers/show.html.erb</p>
+<div class="container">
+  <h4>マイページ</h4>
+
+  <div class="row form-inline">
+    <div>
+      <strong>登録情報</strong>
+    </div>
+    <div>
+      <button type="button" class="btn btn-success m-2">
+        <%= link_to "編集する", edit_public_customers_path,class:"text-light" %>
+      </button>
+    </div>
+  </div>
+
+  <div class="row">
+    <table class="table table-bordered">
+      <tr>
+        <td>
+          氏名
+        </td>
+        <td>
+          <%= @customer.last_name %>　<%= @customer.first_name %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          カナ
+        </td>
+        <td>
+          <%= @customer.last_name_kana %>　<%= @customer.first_name_kana %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          郵便番号
+        </td>
+        <td>
+          <%= @customer.postal_code %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          住所
+        </td>
+        <td>
+          <%= @customer.address %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          電話番号
+        </td>
+        <td>
+          <%= @customer.telephone_number %>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          メールアドレス
+        </td>
+        <td>
+          <%= @customer.email %>
+        </td>
+      </tr>
+    </table>
+  </div>
+  
+   <div class="row form-inline">
+    <div>
+      <strong>配送先</strong>
+    </div>
+    <div>
+      <button type="button" class="btn btn-primary m-2">
+        <%= link_to "一覧を見る",   public_adresses_index_path,class:"text-light" %>
+      </button>
+    </div>
+  </div>
+  
+  <div class="row form-inline">
+    <div>
+      <strong>注文履歴</strong>
+    </div>
+    <div>
+      <button type="button" class="btn btn-primary m-2">
+        <%= link_to "一覧を見る",   public_orders_index_path,class:"text-light" %>
+      </button>
+    </div>
+  </div>
+  
+</div>
