--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,2 +1,22 @@
-<h1>Public::Customers#unsubscribe</h1>
-<p>Find me in app/views/public/customers/unsubscribe.html.erb</p>
+<div class="d-flex align-items-center justify-content-center">
+  <strong>本当に退会しますか</strong>
+</div>
+
+<div class="d-flex align-items-center justify-content-center">
+  <p>退会すると、会員登録情報や</p>
+  <p>これまでの購入履歴が閲覧できなくなります。</p>
+  <p>退会する場合は、「退会する」をクリックしてください。</p>
+</div>
+<div class="d-flex align-items-center justify-content-center">
+  <div>
+    <button type="button" class="btn btn-primary m-2">
+      <%= link_to "退会しない",  edit_public_customers_path,class:"text-light" %>
+    </button>
+  </div>
+  
+  <div>
+    <button type="button" class="btn btn-danger m-2">
+      <%= link_to "退会する", public_withdrawal_path, method: :patch,class:"text-light" %>
+    </button>
+  </div>
+</div>
