--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -71,7 +71,7 @@
     </div>
     <div>
       <button type="button" class="btn btn-primary m-2">
-        <%= link_to "一覧を見る",   public_adresses_index_path,class:"text-light" %>
+        <%= link_to "一覧を見る",   public_adresses_path,class:"text-light" %>
       </button>
     </div>
   </div>
@@ -82,7 +82,7 @@
     </div>
     <div>
       <button type="button" class="btn btn-primary m-2">
-        <%= link_to "一覧を見る",   public_orders_index_path,class:"text-light" %>
+        <%= link_to "一覧を見る",   public_orders_path,class:"text-light" %>
       </button>
     </div>
   </div>
