--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<h4>商品一覧</h4>
+
+<table class="table">
+  <th>
+    商品ID
+  </th>
+  <th>
+    商品名
+  </th>
+  <th>
+    税抜価格
+  </th>
+  <th>
+    ジャンル
+  </th>
+  <th>
+    ステータス
+  </th>
+
+  <% @items.each do |item| %>
+    <tr>
+      <td>
+        <%= item.id %>
+      </td>
+      <td>
+        <%= item.name %>
+      </td>
+      <td>
+        <%= item.price %>
+      </td>
+      <td>
+        <%= item.genr_name %>
+      </td>
+      <td>
+        <%= item.status %>
+      </td>
+    </tr>
+  <% end %>
+</table>
