[finish]ユーザー：商品一覧画面

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,67 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<h4>商品編集</h4>
+
+<%= form_with model: @item, url:admin_item_path, method: :patch do |f| %>
+   <div class="form-inline">
+    <div>
+      <%= f.label :商品画像 %>
+    </div>
+    <div>
+     <%= f.file_field :item_image, placeholder: "商品画像", accept: "image/*" %>
+    </div>
+  </div>
+
+   <div class="form-inline">
+    <div>
+      <%= f.label :商品名 %>
+    </div>
+    <div>
+     <%= f.text_field :name, placeholder: "商品名", accept: "name" %>
+    </div>
+  </div>
+
+   <div class="form-inline">
+    <div>
+      <%= f.label :商品説明 %>
+    </div>
+    <div>
+     <%= f.text_area :introduction, placeholder: "商品説明", accept: "introduction" %>
+    </div>
+  </div>
+
+   <div class="form-inline">
+    <div>
+      <%= f.label :ジャンル %>
+    </div>
+    <div>
+       <%= f.collection_select :genre_id,@genres.all, :id, :name, include_blank: "選択して下さい" %>
+    </div>
+  </div>
+
+  <div class="form-inline">
+    <div>
+      <%= f.label :税抜価格 %>
+    </div>
+    <div>
+     <%= f.text_field :price, placeholder: "1000", accept: "price" %>円
+    </div>
+  </div>
+
+   <div class="form-inline">
+    <div>
+      <%= f.label :販売ステータス %>
+    </div>
+    <div>
+     <%= f.label :status, '販売中', value: 1 %>
+   　 <%= f.radio_button :status, '販売中' %>
+    </div>
+    <div>
+  　  <%= f.label :status, '販売停止中', value: 0 %>
+  　  <%= f.radio_button :status, '販売停止中' %>
+    </div>
+  </div>
+
+  <div>
+   <%= f.submit "変更を保存" %>
+  </div>
+
+<% end %>
