--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
                   </button>
                 <% elsif admin_signed_in? %>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
-                    <%= link_to "商品一覧", public_items_path %>
+                    <%= link_to "商品一覧", admin_items_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
                     <%= link_to "会員一覧", admin_customers_path %>
@@ -47,7 +47,7 @@
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
                     <%= link_to "ジャンル一覧", admin_genres_path %>
-                  </button>  
+                  </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
                     <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
                   </button>
