--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,39 +1,49 @@
-<h4>商品一覧</h4>
+<div class="container">
+  <div class="row">
+    <h4t>商品一覧</h4>
+     <button class="btn btn-sm btn-light" type="button">
+       <%= link_to "+", new_admin_item_path %>
+     </button>
+  </div>
 
-<table class="table">
-  <th>
-    商品ID
-  </th>
-  <th>
-    商品名
-  </th>
-  <th>
-    税抜価格
-  </th>
-  <th>
-    ジャンル
-  </th>
-  <th>
-    ステータス
-  </th>
+  <table class="table">
+    <th>
+      商品ID
+    </th>
+    <th>
+      商品名
+    </th>
+    <th>
+      税抜価格
+    </th>
+    <th>
+      ジャンル
+    </th>
+    <th>
+      ステータス
+    </th>
 
-  <% @items.each do |item| %>
-    <tr>
-      <td>
-        <%= item.id %>
-      </td>
-      <td>
-        <%= item.name %>
-      </td>
-      <td>
-        <%= item.price %>
-      </td>
-      <td>
-        <%= item.genr_name %>
-      </td>
-      <td>
-        <%= item.status %>
-      </td>
-    </tr>
-  <% end %>
-</table>
+    <% @items.each do |item| %>
+      <tr>
+        <td>
+          <%= item.id %>
+        </td>
+        <td>
+          <%= link_to admin_item_path(item.id) do %>
+            <%= item.name %>
+          <% end %>
+        </td>
+        <td>
+          <%= item.price %>
+        </td>
+        <td>
+          <%= item.genre.name %>
+        </td>
+        <td>
+          <%= item.status %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+  <%= paginate @items %>
+</div>
