--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,65 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class="container">
+ <h4>商品詳細</h4>
+ <div class="row">
+   <div class="col-3">
+     <%= image_tag @item.get_item_image(250,250) %>
+   </div>
+   <div class="col-9">
+
+    <div class="form-inline m-2">
+       <div class="col-4">
+         商品名
+       </div>
+       <div class="col-5">
+         <%= @item.name %>
+       </div>
+     </div>
+
+     <div class="form-inline m-2">
+       <div class="col-4">
+         商品説明
+       </div>
+       <div class="col-5">
+         <%= @item.introduction %>
+       </div>
+     </div>
+
+     <div class="form-inline m-2">
+       <div class="col-4">
+         ジャンル
+       </div>
+       <div class="col-5">
+         <%= @item.genre.name %>
+       </div>
+     </div>
+
+     <div class="form-inline m-2">
+       <div class="col-4">
+         税込価格（税抜価格）
+       </div>
+       <div class="col-5">
+         <%= @item.add_tax_price.to_s(:dalimited) %>(<%= (@item.price.to_s(:dalimited)) %>)円
+       </div>
+     </div>
+
+      <div class="form-inline m-2">
+       <div class="col-4">
+         販売ステータス
+       </div>
+       <div class="col-5">
+         <%= @item.status %>
+       </div>
+     </div>
+
+   </div>
+ </div>
+
+ <div class="row">
+   <div class="col-md-6 offset-md-5">
+     <button type="button" class="btn btn-success">
+       <%= link_to "編集する", edit_admin_item_path %>
+     </button>
+   </div>
+ </div>
+
+</div>
