--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,2 +1,43 @@
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+<div class="container form-inline">
+
+  <!--サイドバー-->
+  <div class="col-3">
+    <table class="table table-hover">
+      <thead>
+        ジャンル検索
+      </thead>
+      <tbody>
+        <% @genres.each do |genre| %>
+          <tr>
+            <td>
+              <%= genre.name %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  
+  <!--商品詳細-->
+ <div class="form-inline">
+   <div class="mr-4">
+     <%= image_tag @item.get_item_image(250,250) %>
+   </div>
+   <div>
+       <div class="font-weight-bold">
+         <%= @item.name %>
+       </div>
+       <div>
+         <%= @item.introduction %>
+       </div>
+       <div class="mt-4">
+         <strong>¥<%= @item.add_tax_price.to_s(:dalimited) %></strong>（税込）
+       </div>
+       <div>
+          <%= form_with @cart_item, url:public_cart_items_path, method: :post do |f| %>
+            <%= f.collection_select :amount, [["1", 1],["2", 2],["3", 3]], include_blank: "個数選択" %>
+          <% end %>
+       </div>
+   </div>
+  </div>
+</div>
