--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::Customers#index</h1>
-<p>Find me in app/views/admin/customers/index.html.erb</p>
+<div class="container">
+  <h4>会員一覧</h4>
+  <table class="table">
+    <th>
+      会員ID
+    </th>
+     <th>
+      氏名
+    </th>
+     <th>
+      メールアドレス
+    </th>
+     <th>
+      ステータス
+    </th>
+    <% @customers.each do |customer| %>
+      <tr>
+        <td>
+          <%= customer.id %>
+        </td>
+        <td>
+          <%= link_to admin_customer_path(customer.id) do %>
+            <%= customer.last_name %><%= customer.first_name %>
+          <% end %>
+        </td>
+        <td>
+          <%= customer.email %>
+        </td>
+        <td>
+          <%= customer.is_deleted ? '退会' : '有効' %>
+        </td>
+      </tr>
+      <% end %>
+  </table>
+  <div class="center-block">
+   <%= paginate @customers %>
+  </div>
+</div>
