--- a/app/views/public/adresses/index.html.erb
+++ b/app/views/public/adresses/index.html.erb
@@ -1,2 +1,70 @@
-<h1>Public::Adresses#index</h1>
-<p>Find me in app/views/public/adresses/index.html.erb</p>
+<div class="container">
+  <h4>配送先登録/一覧</h4>
+
+  <%= form_with model: @adress, url: public_adresses_path, method: :post do |f| %>
+    <div class="row form-inline">
+      <div class="col-3">
+        <%= f.label :郵便番号（ハイフンなし） %>
+      </div>
+      <div class="col-3">
+        <%= f.text_field :postal_code, placeholder: "0000000", accept: "postal_code" %>
+      </div>
+    </div>
+    <div class="row form-inline">
+      <div class="col-3">
+        <%= f.label :住所 %>
+      </div>
+      <div class="col-6">
+        <%= f.text_field :addressee, placeholder: "東京都渋谷区代々木神園町0-0", accept: "addressee", style: "width: 100%;" %>
+      </div>
+    </div>
+    <div class="row form-inline">
+      <div class="col-3">
+        <%= f.label :宛名 %>
+      </div>
+      <div class="col-6">
+        <%= f.text_field :address, placeholder: "令和道子", accept: "address" %>
+      </div>
+      <div class="col-3">
+        <%= f.submit "新規登録", class:"btn btn-success text-light" %>
+      </div>
+    </div>
+  <% end %>
+
+  <table class="table bordered">
+    <th class="table-secondary">
+      郵便番号
+    </th>
+    <th class="table-secondary">
+      住所
+    </th>
+    <th class="table-secondary">
+      宛名
+    </th>
+    <th class="table-secondary">
+
+    </th>
+    <% @adresses.each do |adress| %>
+      <tr>
+        <td>
+          <%= adress.postal_code %>
+        </td>
+        <td>
+          <%= adress.addressee %>
+        </td>
+        <td>
+          <%= adress.address %>
+        </td>
+        <td>
+          <button type="button" class="btn btn-success">
+            <%= link_to "編集する", edit_public_adress_path(adress.id), class:"text-light" %>
+          </button>
+          <button type="button" class="btn btn-danger">
+            <%= link_to "削除する", public_adress_path(adress.id), method: :delete, class:"text-light" %>
+          </button>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+
+</div>
