--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -17,7 +17,7 @@
       </tbody>
     </table>
   </div>
-  
+
   <!--商品詳細-->
  <div class="form-inline">
    <div class="mr-4">
@@ -34,8 +34,9 @@
          <strong>¥<%= @item.add_tax_price.to_s(:dalimited) %></strong>（税込）
        </div>
        <div>
-          <%= form_with @cart_item, url:public_cart_items_path, method: :post do |f| %>
-            <%= f.collection_select :amount, [["1", 1],["2", 2],["3", 3]], include_blank: "個数選択" %>
+          <%= form_with model: @cart_item, url: public_cart_items_path, method: :post do |f| %>
+            <%= f.select :amount, *[1..3], include_blank: "個数選択" %>
+            <%= f.submit "カートに入れる" %> 
           <% end %>
        </div>
    </div>
