--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,50 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h4>ショッピングカート</h4>
+    <button type="button" class="btn btn-danger">
+      <%= link_to "カートを空にする", destroy_all_public_cart_items_path, method: :delete, class:"text-light" %>
+    </button>
+  </div>
+
+  <table class="table">
+    <th>
+      商品名
+    </th>
+    <th>
+      単価（税込）
+    </th>
+    <th>
+      数量
+    </th>
+    <th>
+      小計
+    </th>
+    <th>
+
+    </th>
+    <% @cart_items.each do |cart_item| %>
+      <tr>
+        <td>
+          <%= cart_item.item.name %>
+        </td>
+        <td>
+          <%= cart_item.item.add_tax_price.to_s(:dalimited) %>
+        </td>
+        <td>
+          <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
+            <%= f.select :amount, *[1..3] %>
+            <%= f.submit "変更", class:"btn btn-success text-light" %>
+          <% end %>
+        </td>
+         <td>
+          <%= cart_item.add_tax_price.to_s(:dalimited)* cart_item.amount %>
+        </td>
+        <td>
+          <button type="button" class="btn btn-danger">
+            <%= link_to "削除する", public_cart_item_path(cart_item.id), method: :delete, class:"text-light" %>
+          </button>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+</div>
