--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -36,6 +36,7 @@
        <div>
           <%= form_with model: @cart_item, url: public_cart_items_path, method: :post do |f| %>
             <%= f.select :amount, *[1..3], include_blank: "個数選択" %>
+            <%= f.hidden_field :item_id, :value => @item.id %>
             <%= f.submit "カートに入れる" %> 
           <% end %>
        </div>
