--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -35,7 +35,7 @@
             <% end %>
           </div>
           <div class="item-price">
-            ¥<%= item.price %>
+            ¥<%= item.price.to_s(:dalimited) %>
           </div>
         </div>
       <% end %>
