--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -38,7 +38,7 @@
          税込価格（税抜価格）
        </div>
        <div class="col-5">
-         <%= @item.add_tax_price.to_s(:dalimited) %>(<%= (@item.price.to_s(:dalimited)) %>)円
+         <%= @item.taxin_price.to_s(:delimited) %>(<%= (@item.price.to_s(:delimited)) %>)円
        </div>
      </div>
 
