--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,43 +1,45 @@
 <div class="container">
-  <div class="row">
+  <div class="row m-3">
     <h4>ショッピングカート</h4>
-    <button type="button" class="btn btn-danger">
-      <%= link_to "カートを空にする", destroy_all_public_cart_items_path, method: :delete, class:"text-light" %>
-    </button>
+    <div class="col-3 offset-6">
+      <button type="button" class="btn btn-danger">
+        <%= link_to "カートを空にする", destroy_all_public_cart_items_path, method: :delete, class:"text-light" %>
+      </button>
+    </div>
   </div>
 
-  <table class="table">
-    <th>
+  <table class="table table-bordered">
+    <th class="table-secondary">
       商品名
     </th>
-    <th>
+    <th class="table-secondary">
       単価（税込）
     </th>
-    <th>
+    <th class="table-secondary">
       数量
     </th>
-    <th>
+    <th class="table-secondary">
       小計
     </th>
-    <th>
+    <th class="table-secondary">
 
     </th>
     <% @cart_items.each do |cart_item| %>
       <tr>
-        <td>
+        <td class="pl-4">
           <%= cart_item.item.name %>
         </td>
         <td>
-          <%= cart_item.item.add_tax_price.to_s(:dalimited) %>
+          <%= cart_item.item.taxin_price.ceil.to_s(:dalimited) %>
         </td>
         <td>
           <%= form_with model: cart_item, url: public_cart_item_path(cart_item.id), method: :patch do |f| %>
-            <%= f.select :amount, *[1..3] %>
+            <%= f.select :amount, *[1..10] %>
             <%= f.submit "変更", class:"btn btn-success text-light" %>
           <% end %>
         </td>
          <td>
-          <%= cart_item.add_tax_price.to_s(:dalimited)* cart_item.amount %>
+           <%= (cart_item.item.taxin_price * cart_item.amount).ceil.to_s(:delimited) %>
         </td>
         <td>
           <button type="button" class="btn btn-danger">
@@ -47,4 +49,29 @@
       </tr>
     <% end %>
   </table>
+  <div class="row">
+     <button type="button" class="btn btn-primary">
+        <%= link_to "買い物を続ける", root_path,class:"text-light" %>
+     </button>
+     <div class="col-3 offset-7 ">
+       <table class="table table-bordered">
+         <tr>
+           <td class="table-secondary ">
+             合計金額
+           </td>
+           <td>
+             <%= @total.round.to_s(:delimited)%>
+           </td>
+         </tr>
+       </table>
+     </div>
+  </div>
+  <div class="row">
+    <div class="col-3 offset-5">
+     <button type="button" class="btn btn-success">
+        <%= link_to "情報入力に進む", new_public_order_path,class:"text-light" %>
+     </button>
+    </div>
+    
+  </div>
 </div>
