--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Public::Orders#new</h1>
-<p>Find me in app/views/public/orders/new.html.erb</p>
+<div class="container">
+  <h4 class="ml-4">注文情報入力</h4>
+  <h6>支払方法</h6>
+  <div class="ml-2">
+    <%= form_with model:@order do |f| %>
+      <%= form.radio_button :pay, :male %>
+      <%= form.radio_button :gender, :female %>
+    <% end %>
+  </div>
+</div>
