[work]注文情報入力画面

--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,10 +1,23 @@
 <div class="container">
   <h4 class="ml-4">注文情報入力</h4>
-  <h6>支払方法</h6>
-  <div class="ml-2">
-    <%= form_with model:@order do |f| %>
-      <%= form.radio_button :pay, :male %>
-      <%= form.radio_button :gender, :female %>
-    <% end %>
-  </div>
+  <h5><strong>支払方法</strong></h5>
+  <%= form_with model: @order, url: public_orders_path do |f| %>
+    <div>
+      <div>
+        <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
+        <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
+      </div>
+      <div>
+        <%= f.radio_button :payment_method, Order.payment_methods.key(2) %>
+        <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer] %>
+      </div>
+    </div>
+  
+    <div>
+      <h5><strong>お届け先</strong></h5>
+      <%= f.radio_button :address, Adress.address_display %>
+      <%= f.label :adress,Adress.addressee %>
+      <%= f.select :address_id, options_from_collection_for_select(Adress.all, :id, :address_display) %>
+    </div>
+  <% end %>
 </div>
