--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,23 +1,64 @@
 <div class="container">
   <h4 class="ml-4">注文情報入力</h4>
   <h5><strong>支払方法</strong></h5>
-  <%= form_with model: @order, url: public_orders_path do |f| %>
+  <%= form_with model: @order, url: public_orders_confirm_path do |f| %>
     <div>
       <div>
-        <%= f.radio_button :payment_method, Order.payment_methods.key(1) %>
-        <%= f.label :payment_method_credit_card, Order.payment_methods_i18n[:credit_card] %>
+        <%= f.radio_button :payment, Order.payments.key(1) %>
+        <%= f.label :payment, Order.payments_i18n[:credit_card] %>
       </div>
       <div>
-        <%= f.radio_button :payment_method, Order.payment_methods.key(2) %>
-        <%= f.label :payment_method_transfer, Order.payment_methods_i18n[:transfer] %>
+        <%= f.radio_button :payment, Order.payments.key(2) %>
+        <%= f.label :payment, Order.payments_i18n[:transfer] %>
       </div>
     </div>
-  
+
     <div>
       <h5><strong>お届け先</strong></h5>
-      <%= f.radio_button :address, Adress.address_display %>
-      <%= f.label :adress,Adress.addressee %>
-      <%= f.select :address_id, options_from_collection_for_select(Adress.all, :id, :address_display) %>
+      <div>
+        <%= f.radio_button :address_select, 0 %>
+        <%= f.label :address, "ご自身の住所"  %>
+        <%= '〒' + current_customer.postal_code + ' ' + current_customer.address + ' ' + current_customer.last_name + current_customer.first_name %>
+
+      </div>
+      <div>
+        <%= f.radio_button :addres_select, 1 %>
+        <%= f.label :adress, "登録済住所から選択" %>
+        <div>
+          <%= f.select :address_id, options_from_collection_for_select(Adress.all, :id, :address_display) %>
+        </div>
+      </div>
+      <div>
+        <%= f.radio_button :address_select, 2 %>
+        <%= f.label :adress, "新しいお届け先" %>
+      </div>
+      <div class="form-inline">
+        <div>
+          <%= f.label :郵便番号（ハイフンなし） %>
+        </div>
+        <div>
+          <%= f.text_field :postal_code, placeholder: "0000000", accept: "postal_code" %>
+        </div>
+      </div>
+
+    <div class="form-inline">
+      <div>
+        <%= f.label :住所 %>
+      </div>
+      <div>
+        <%= f.text_field :addressee, placeholder: "東京都渋谷区代々木神園町0-0", accept: "addressee", style: "width: 100%;" %>
+      </div>
     </div>
+
+    <div class="form-inline">
+      <div>
+        <%= f.label :宛名 %>
+      </div>
+      <div>
+        <%= f.text_field :address, placeholder: "令和道子", accept: "address" %>
+      </div>
+      </div>
+    </div>
+    <%= f.submit "確認画面へ進む", class:"btn-primary" %>
   <% end %>
 </div>
