--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,47 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<div class="container">
+  <h4>注文履歴一覧</h4>
+
+  <table class="table table-bordered">
+    <th class="table-secondary">
+      注文日
+    </th>
+    <th class="table-secondary">
+      配送先
+    </th>
+    <th class="table-secondary">
+      注文商品
+    </th>
+    <th class="table-secondary">
+      支払金額
+    </th>
+    <th class="table-secondary">
+      注文詳細
+    </th>
+    <% @orders.each do |order| %>
+      <tr>
+        <td>
+          <%= order.created_at.strftime('%Y/%m/%d') %>
+        </td>
+        <td>
+          <%= '〒' + order.postal_code %><br>
+          <%= order.address %><br>
+          <%= order.addressee %>
+        </td>
+        <td>
+          <% @order_details.each do |order_detail| %>
+            <%= order_detail.item_id %>
+          <% end %>
+        </td>
+        <td>
+          <%= order.amount_claimed.to_s(:delimited) + '円' %>
+        </td>
+        <td>
+          <%= link_to "表示する", public_orders_show_path, class: "btn btn-primary" %>
+        </td>
+      </tr>
+    <% end %>
+  </table>
+
+
+
+</div>
