--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,2 +1,68 @@
-<h1>Public::Orders#show</h1>
-<p>Find me in app/views/public/orders/show.html.erb</p>
+<div class="container">
+  <h4>注文履歴詳細</h4>
+  
+  <div class="row form-inline">
+    <div class="col-9">
+      <strong>注文情報</strong>
+      <table class="table table-bordered">
+        <tr>
+          <td class="table-secondary">
+            注文日
+          </td>
+          <td>
+            <%= @order.created_at.strftime('%Y/%m/%d') %>
+          </td>
+           <td class="table-secondary">
+            配送先
+          </td>
+          <td>
+            <%= '〒' + @order.postal_code %><br>
+            <%= @order.address %><br>
+            <%= @order.addressee %>
+          </td>
+          <td class="table-secondary">
+            注文日
+          </td>
+          <td>
+            <%= @order.payment_i18n %>
+          </td>
+        </tr>
+      </table>
+    </div>
+    
+    <div class="col-3">
+      <table class="table table-bordered">
+        <tr>
+          <td class="table-secondary">
+            商品合計
+          </td>
+          <td>
+            <!--ここに商品合計を表示させる-->
+          </td>
+           <td class="table-secondary">
+            配送料
+          </td>
+          <td>
+            <%= @order.freight %>
+          </td>
+           <td class="table-secondary">
+            ご請求額
+          </td>
+          <td>
+            <%= @order.amount_claimed %>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
+  
+  <div class="row">
+    <div class="col-11">
+      <table class="table table-bordered">
+        ここに注文内容を表示させる
+      </table>
+    </div>
+  </div>
+  
+  
+</div>
