--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -13,14 +13,15 @@
     <% @orders.each do |order| %>
       <tr>
         <td>
-          <%= order.created_at %>
+          <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
         </td>
         <td>
-          <%= order.customer.name %>
+          <%= order.customer.last_name + order.customer.first_name %>
         </td>
         <td>
-          <%= order.amount %>
+          <%= order.order_details. %>
         </td>
       </tr>
+    <% end %>
   </table>
 </div>
