--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -12,6 +12,8 @@
           <td>
             <%= @order.created_at.strftime('%Y/%m/%d') %>
           </td>
+        </tr>
+        <tr>
            <td class="table-secondary">
             配送先
           </td>
@@ -20,8 +22,10 @@
             <%= @order.address %><br>
             <%= @order.addressee %>
           </td>
+        </tr>
+        <tr>
           <td class="table-secondary">
-            注文日
+            支払方法
           </td>
           <td>
             <%= @order.payment_i18n %>
@@ -37,14 +41,18 @@
             商品合計
           </td>
           <td>
-            <!--ここに商品合計を表示させる-->
+            <%= @total.round.to_s(:delimited)%>
           </td>
+        </tr>
+        <tr>
            <td class="table-secondary">
             配送料
           </td>
           <td>
             <%= @order.freight %>
           </td>
+        </tr>
+        <tr>
            <td class="table-secondary">
             ご請求額
           </td>
@@ -59,7 +67,35 @@
   <div class="row">
     <div class="col-11">
       <table class="table table-bordered">
-        ここに注文内容を表示させる
+        <th class="table-secondary">
+          商品
+        </th>
+        <th class="table-secondary">
+          単価（税込）
+        </th>
+        <th class="table-secondary">
+          個数
+        </th>
+        <th class="table-secondary">
+          小計
+        </th>
+        <% @order.order_details.each do |order_detail| %>
+          <tr>
+            <td>
+              <%= order_detail.item.name %>
+            </td>
+            <td>
+              <%= order_detail.item.taxin_price.ceil.to_s(:delimited) %>
+            </td>
+            <td>
+              <%= order_detail.amount %>
+            </td>
+            <td>
+              <%= (order_detail.item.taxin_price * order_detail.amount).ceil.to_s(:delimited) %>
+            </td>
+          </tr>
+            
+          <% end %>
       </table>
     </div>
   </div>
