[work]レイアウト調整

--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -71,12 +71,9 @@
   </div>
   
   <div class="row form-inline">
-    <button type="button" class="btn btn-success">
-      <%= link_to "編集する", edit_admin_customer_path, class:"text-light mr-6" %>
-    </button>
-     <button type="button" class="btn btn-primary">
-      <%= link_to "注文履歴一覧を見る", admin_orders_show_path, class:"text-light" %>
-    </button>
+    <div>
+      <%= link_to "編集する", edit_admin_customer_path, class:"btn btn-success text-light mr-6" %>
+    </div>
   </div>
   
 </div>
