--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -2,7 +2,7 @@
   <h4>注文履歴一覧</h4>
   <table class="table">
     <th>
-      購入日時
+     購入日時
     </th>
     <th>
       購入者
@@ -13,13 +13,15 @@
     <% @orders.each do |order| %>
       <tr>
         <td>
-          <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
+          <%= link_to admin_order_path(order.id) do %>
+            <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
+          <% end %>
         </td>
         <td>
           <%= order.customer.last_name + order.customer.first_name %>
         </td>
         <td>
-          <%= order.order_details. %>
+          <%= order.get_total_amount(order) %>
         </td>
       </tr>
     <% end %>
