--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,114 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<div class="container">
+  <h4>注文履歴詳細</h4>
+  
+  <div class="row form-inline">
+    <div class="col-2">
+      <strong>購入者</strong>
+    </div>
+    <div class="col-2">
+      <%= @order.customer.last_name + " " + @order.customer.first_name %>
+    </div>
+  </div>
+  
+  <div class="row form-inline">
+    <div class="col-2">
+      <strong>注文日</strong>
+    </div>
+    <div class="col-2">
+      <%= @order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
+    </div>
+  </div>
+  
+  <div class="row form-inline">
+    <div class="col-2">
+      <strong>配送先</strong>
+    </div>
+    <div class="col-10">
+      <%= "〒" + @order.postal_code + " " + @order.addressee %><br>
+      <%= @order.address %>
+    </div>
+  </div>
+  
+  <div class="row form-inline">
+    <div class="col-2">
+      <strong>支払方法</strong>
+    </div>
+    <div class="col-2">
+      <%= @order.payment_i18n %>
+    </div>
+  </div>
+  
+  <div class="row form-inline">
+    <div class="col-9">
+      <table class="table table-bordered">
+        <th class="table-secondary">
+          商品
+        </th>
+        <th class="table-secondary">
+          単価（税込）
+        </th>
+        <th class="table-secondary">
+          数量
+        </th>
+        <th class="table-secondary">
+          小計
+        </th>
+        <% @order.order_details.each do |order_detail| %>
+          <tr>
+            <td>
+              <%= link_to admin_customer_path do %>
+                <%= order_detail.item.name %>
+              <% end %>
+            </td>
+            <td>
+              <%= order_detail.item.taxin_price.ceil.to_s(:delimited) %>
+            </td>
+            <td>
+              <%= order_detail.amount %>
+            </td>
+            <td>
+              <%= (order_detail.item.taxin_price * order_detail.amount).ceil.to_s(:delimited) %>
+            </td>
+          </tr>
+            
+          <% end %>
+      </table>
+    </div>
+  
+    <div class="col-3">
+        <table class="table table-bordered">
+          <tr>
+            <td class="table-secondary">
+              商品合計
+            </td>
+            <td>
+              <%= @total.round.to_s(:delimited) %>円
+            </td>
+          </tr>
+          <tr>
+             <td class="table-secondary">
+              送料
+            </td>
+            <td>
+              <%= @order.freight %>円
+            </td>
+          </tr>
+          <tr>
+             <td class="table-secondary">
+              請求金額合計
+            </td>
+            <td>
+              <%= @order.amount_claimed.to_s(:delimited) %>円
+            </td>
+          </tr>
+        </table>
+      </div>
+      
+    </div>
+  
+  
+  
+  
+  
+  
+</div>
