--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
                     <%= link_to "会員一覧", admin_customers_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
-                    <%= link_to "注文履歴一覧", admin_orders_show_path %>
+                    <%= link_to "注文履歴一覧", admin_root_path %>
                   </button>
                   <button class="btn btn-sm btn-outline-secondary" type="button">
                     <%= link_to "ジャンル一覧", admin_genres_path %>
