--- a/app/views/public/adresses/index.html.erb
+++ b/app/views/public/adresses/index.html.erb
@@ -31,17 +31,17 @@
     </div>
   <% end %>
 
-  <table class="table bordered">
-    <th class="table-secondary">
+  <table class="table bordered border-dark">
+    <th class="table-active">
       郵便番号
     </th>
-    <th class="table-secondary">
+    <th class="table-active">
       住所
     </th>
-    <th class="table-secondary">
+    <th class="table-active">
       宛名
     </th>
-    <th class="table-secondary">
+    <th class="table-active">
 
     </th>
     <% @adresses.each do |adress| %>
