--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -9,19 +9,19 @@
   </div>
 
   <table class="table table-bordered">
-    <th class="table-secondary">
+    <th class="table-active">
       商品名
     </th>
-    <th class="table-secondary">
+    <th class="table-active">
       単価（税込）
     </th>
-    <th class="table-secondary">
+    <th class="table-active">
       数量
     </th>
-    <th class="table-secondary">
+    <th class="table-active">
       小計
     </th>
-    <th class="table-secondary">
+    <th class="table-active">
 
     </th>
     <% @cart_items.each do |cart_item| %>
@@ -56,7 +56,7 @@
      <div class="col-3 offset-7 ">
        <table class="table table-bordered">
          <tr>
-           <td class="table-secondary ">
+           <td class="table-active">
              合計金額
            </td>
            <td>
