--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,12 +1,12 @@
   <div class="container">
   
-    <div class="row form-inline">
+    <div class="row form-inline m-2">
       <!--サイドバー-->
       <div class="col-3">
-        <table class="table table-hover">
-          <thead>
-            ジャンル検索
-          </thead>
+        <table class="table table-bordered border-primary table-hover">
+          <th>
+            <strong>ジャンル検索</strong>
+          </th>
           <tbody>
             <% @genres.each do |genre| %>
               <tr>
@@ -19,7 +19,7 @@
         </table>
       </div>
       
-      <div class="col-9 borderd">
+      <div class="col-6 offset-3 bordered">
         ようこそ、ながのCAKEへ！<br>
         このさいとは、ケーキ販売のECサイトになります。<br>
         会員でない方も商品の閲覧はできますが、<br>
@@ -28,11 +28,14 @@
       
     </div>
     
-
-    <h3>新着商品</h3>
+    <div class="row m-2">
+      <div class="col-3 offset-3">
+        <h3>新着商品</h3>
+      </div>
+    </div>
     
-    <div class="row form-inline">
-     <div class="d-flex p-2 bd-highlight flex-wrap">
+    <div class="row form-inline ml-4">
+     <div class="col-9 offset-3 d-flex p-2 bd-highlight flex-wrap">
       <% @items.each do |item| %>
         <div class="item m-2">
           <div class="item-image">
@@ -54,8 +57,8 @@
    </div>
     
     <div class="row">
-      <div class="col-auto">
-        <%= link_to "すべての商品を見る>", public_items_path %>
+      <div class="col-3 offset-9">
+        <%= link_to "すべての商品を見る>", public_items_path, class:"border-bottom border-primary" %>
       </div>
     </div>
     </div>
