--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container form-inline">
 
-  <!--サイドバー-->
+ <!--サイドバー-->
   <div class="col-3">
-    <table class="table table-hover">
-      <thead>
+    <table class="table table-bordered border-dark table-hover">
+      <th>
         ジャンル検索
-      </thead>
+      </th>
       <tbody>
         <% @genres.each do |genre| %>
           <tr>
@@ -37,7 +37,7 @@
           <%= form_with model: @cart_item, url: public_cart_items_path, method: :post do |f| %>
             <%= f.select :amount, *[1..10], include_blank: "個数選択" %>
             <%= f.hidden_field :item_id, :value => @item.id %>
-            <%= f.submit "カートに入れる" %> 
+            <%= f.submit "カートに入れる", class:"btn btn-success" %> 
           <% end %>
        </div>
    </div>
