--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -24,8 +24,8 @@
         </td>
         <td>
           <%= '〒' + order.postal_code %><br>
-          <%= order.address %><br>
-          <%= order.addressee %>
+          <%= order.addressee %><br>
+          <%= order.address %>
         </td>
         <td>
           <% order.order_details.each do |order_detail| %>
