--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,37 +1,47 @@
 <div class="container">
-  <h4>会員一覧</h4>
-  <table class="table">
-    <th>
-      会員ID
-    </th>
-     <th>
-      氏名
-    </th>
-     <th>
-      メールアドレス
-    </th>
-     <th>
-      ステータス
-    </th>
-    <% @customers.each do |customer| %>
-      <tr>
-        <td>
-          <%= customer.id %>
-        </td>
-        <td>
-          <%= link_to admin_customer_path(customer.id) do %>
-            <%= customer.last_name %><%= customer.first_name %>
+  <div class="row m-2">
+    <div>
+      <h4>会員一覧</h4>
+    </div>
+  </div>
+  
+  <div class="row m-2">
+    <div class="col-12">
+      <table class="table">
+        <th class="table-active">
+          会員ID
+        </th>
+        <th class="table-active">
+          氏名
+        </th>
+        <th class="table-active">
+          メールアドレス
+        </th>
+        <th class="table-active">
+          ステータス
+        </th>
+        <% @customers.each do |customer| %>
+          <tr>
+            <td>
+              <%= customer.id %>
+            </td>
+            <td>
+              <%= link_to admin_customer_path(customer.id), class:"border-bottom border-dark text-dark" do %>
+                <%= customer.last_name %><%= customer.first_name %>
+              <% end %>
+            </td>
+            <td>
+              <%= customer.email %>
+            </td>
+            <td>
+              <%= customer.is_deleted ? '退会' : '有効' %>
+            </td>
+          </tr>
           <% end %>
-        </td>
-        <td>
-          <%= customer.email %>
-        </td>
-        <td>
-          <%= customer.is_deleted ? '退会' : '有効' %>
-        </td>
-      </tr>
-      <% end %>
-  </table>
+      </table>
+    </div>
+  </div>
+  
   <div class="center-block">
    <%= paginate @customers %>
   </div>
