--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,77 +1,84 @@
 <div class="container">
-  <h4><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h4>
+  
+  <div class="row m-2">
+    <div>
+      <h4><%= @customer.last_name %><%= @customer.first_name %>さんの会員詳細</h4>
+    </div>
+  </div>
 
   <div class="row">
-    <table class="table table-bordered">
-      <tr>
-        <td>
-          会員ID
-        </td>
-        <td>
-          <%= @customer.id %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          氏名
-        </td>
-        <td>
-          <%= @customer.last_name %>　<%= @customer.first_name %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          カナ
-        </td>
-        <td>
-          <%= @customer.last_name_kana %>　<%= @customer.first_name_kana %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          郵便番号
-        </td>
-        <td>
-          <%= @customer.postal_code %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          住所
-        </td>
-        <td>
-          <%= @customer.address %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          電話番号
-        </td>
-        <td>
-          <%= @customer.telephone_number %>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          メールアドレス
-        </td>
-        <td>
-          <%= @customer.email %>
-        </td>
-      </tr>
-       <tr>
-        <td>
-          会員ステータス
-        </td>
-        <td>
-          <%= @customer.is_deleted ? '退会' : '有効' %>
-        </td>
-      </tr>
-    </table>
+    <div class="col-12">
+      <table class="table table-bordered">
+        <tr>
+          <td>
+            会員ID
+          </td>
+          <td>
+            <%= @customer.id %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            氏名
+          </td>
+          <td>
+            <%= @customer.last_name %>　<%= @customer.first_name %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            カナ
+          </td>
+          <td>
+            <%= @customer.last_name_kana %>　<%= @customer.first_name_kana %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            郵便番号
+          </td>
+          <td>
+            <%= @customer.postal_code %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            住所
+          </td>
+          <td>
+            <%= @customer.address %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            電話番号
+          </td>
+          <td>
+            <%= @customer.telephone_number %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            メールアドレス
+          </td>
+          <td>
+            <%= @customer.email %>
+          </td>
+        </tr>
+         <tr>
+          <td>
+            会員ステータス
+          </td>
+          <td>
+            <%= @customer.is_deleted ? '退会' : '有効' %>
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
   
   <div class="row form-inline">
-    <div>
+    <div class="col-3 offset-5">
       <%= link_to "編集する", edit_admin_customer_path, class:"btn btn-success text-light mr-6" %>
     </div>
   </div>
