--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,14 +1,24 @@
-<h4>ジャンル編集</h4>
-<%= form_with model: @genre, url:admin_genre_path, method: :patch do |f| %>
-  <div class="row form-inline m-2">
-      <div class="col-4">
-        <%= f.label :ジャンル名 %>
-      </div>
-      <div>
-        <%= f.text_field :name, autofocus: true, id:"name" %>
-      </div>
-      <div>
-        <%= f.submit "変更を保存" %>
-      </div>
+<div class="container">
+  
+  <div class="row m-2">
+    <div>
+      <h4>ジャンル編集</h4>
+    </div>
   </div>
-<% end %>
+  
+  <%= form_with model: @genre, url:admin_genre_path, method: :patch do |f| %>
+    <div class="row form-inline m-2">
+        <div class="col-3">
+          <%= f.label :ジャンル名 %>
+        </div>
+        <div class="col-4">
+          <%= f.text_field :name, autofocus: true, id:"name", style:"width:80%;" %>
+        </div>
+        <div class="col-3">
+          <%= f.submit "変更を保存", class:"btn btn-success" %>
+        </div>
+    </div>
+  <% end %>
+
+
+</div>
