--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,29 +1,39 @@
 <div class="container">
-  <h4>注文履歴一覧</h4>
-  <table class="table">
-    <th>
-     購入日時
-    </th>
-    <th>
-      購入者
-    </th>
-    <th>
-      注文個数
-    </th>
-    <% @orders.each do |order| %>
-      <tr>
-        <td>
-          <%= link_to admin_order_path(order.id) do %>
-            <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
-          <% end %>
-        </td>
-        <td>
-          <%= order.customer.last_name + order.customer.first_name %>
-        </td>
-        <td>
-          <%= order.get_total_amount(order) %>
-        </td>
-      </tr>
-    <% end %>
-  </table>
+
+  <div class="row m-2">
+    <div>
+      <h4>注文履歴一覧</h4>
+    </div>
+  </div>
+
+  <div class="row m-2">
+    <div class="col-12">
+      <table class="table">
+        <th class="table-active">
+         購入日時
+        </th>
+        <th class="table-active">
+          購入者
+        </th>
+        <th class="table-active">
+          注文個数
+        </th>
+        <% @orders.each do |order| %>
+          <tr>
+            <td>
+              <%= link_to admin_order_path(order.id),  class:"border-bottom border-dark text-dark" do %>
+                <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
+              <% end %>
+            </td>
+            <td>
+              <%= order.customer.last_name + order.customer.first_name %>
+            </td>
+            <td>
+              <%= order.get_total_amount(order) %>
+            </td>
+          </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
 </div>
