--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,67 +1,89 @@
-<h4>商品新規登録</h4>
+<div class="container">
 
-<%= form_with model: @item, url:admin_items_path, method: :post do |f| %>
-   <div class="form-inline">
-    <div>
-      <%= f.label :商品画像 %>
-    </div>
-    <div>
-     <%= f.file_field :item_image, placeholder: "商品画像", accept: "image/*" %>
-    </div>
+ <% if @item.errors.any? %>
+  <%= @item.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @item.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+ <div class="row m-2">
+  <div>
+   <h4>商品新規登録</h4>
   </div>
+ </div>
 
-   <div class="form-inline">
-    <div>
-      <%= f.label :商品名 %>
-    </div>
-    <div>
-     <%= f.text_field :name, placeholder: "商品名", accept: "name" %>
-    </div>
-  </div>
+ <%= form_with model: @item, url:admin_items_path, method: :post do |f| %>
 
-   <div class="form-inline">
-    <div>
-      <%= f.label :商品説明 %>
-    </div>
-    <div>
-     <%= f.text_area :introduction, placeholder: "商品説明", accept: "introduction" %>
-    </div>
-  </div>
+    <div class="row form-inline m-2">
+     <div class="col-3">
+       <%= f.label :商品画像 %>
+     </div>
+     <div class="col-6">
+      <%= f.file_field :item_image, placeholder: "商品画像", accept: "image/*" %>
+     </div>
+   </div>
 
-   <div class="form-inline">
-    <div>
-      <%= f.label :ジャンル %>
-    </div>
-    <div>
-       <%= f.collection_select :genre_id,@genres.all, :id, :name, include_blank: "選択して下さい" %>
-    </div>
-  </div>
+    <div class="row form-inline m-2">
+     <div class="col-3">
+       <%= f.label :商品名 %>
+     </div>
+     <div class="col-6">
+      <%= f.text_field :name, placeholder: "商品名", accept: "name", style:"width:90%;" %>
+     </div>
+   </div>
 
-  <div class="form-inline">
-    <div>
-      <%= f.label :税抜価格 %>
-    </div>
-    <div>
-     <%= f.text_field :price, placeholder: "1000", accept: "price" %>円
-    </div>
-  </div>
+    <div class="row form-inline m-2">
+     <div class="col-3">
+       <%= f.label :商品説明 %>
+     </div>
+     <div class="col-6">
+      <%= f.text_area :introduction, placeholder: "ここに説明文を記述します", accept: "introduction", style:"width:90%;" %>
+     </div>
+   </div>
 
-   <div class="form-inline">
-    <div>
+    <div class="row form-inline m-2">
+     <div class="col-3">
+       <%= f.label :ジャンル %>
+     </div>
+     <div class="col-6">
+        <%= f.collection_select :genre_id,@genres.all, :id, :name, include_blank: "--選択して下さい--　　　　　　　　　　　　　　　　　　　", style:"width:90%;" %>
+     </div>
+   </div>
+
+   <div class="row form-inline m-2">
+     <div class="col-3">
+       <%= f.label :税抜価格 %>
+     </div>
+     <div class="col-6">
+      <%= f.text_field :price, placeholder: "1000", accept: "price", style:"width:90%;" %>円
+     </div>
+   </div>
+
+   <div class="row form-inline m-2">
+    <div class="col-3">
       <%= f.label :販売ステータス %>
     </div>
-    <div>
-     <%= f.label :status, '販売中', value: 1 %>
-   　 <%= f.radio_button :status, '販売中' %>
+    <div class="col-2 form-inline">
+     <%= f.radio_button :status, '販売中' %>
+     <%= f.label :status, '販売中' %>
     </div>
-    <div>
-  　  <%= f.label :status, '販売停止中', value: 0 %>
-  　  <%= f.radio_button :status, '販売停止中' %>
+    <div class="col-2 form-inline">
+     <%= f.radio_button :status, '販売停止中' %>
+     <%= f.label :status, '販売停止中' %>
     </div>
-  </div>
+   </div>
 
-  <div>
-   <%= f.submit "新規登録" %>
-  </div>
+   <div class="row m-2">
+    <div class="col-3 offset-5">
+     <%= f.submit "新規登録" %>
+    </div>
+   </div>
 
-<% end %>
+ <% end %>
+
+
+
+</div>
