--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,5 +1,10 @@
 <div class="container">
-  <h4>注文履歴詳細</h4>
+  
+  <div class="row">
+    <div>
+      <h4>注文履歴詳細</h4>
+    </div>
+  </div>
   
   <div class="row form-inline">
     <div class="col-2">
@@ -24,8 +29,7 @@
       <strong>配送先</strong>
     </div>
     <div class="col-10">
-      <%= "〒" + @order.postal_code + " " + @order.addressee %><br>
-      <%= @order.address %>
+      <%= "〒" + @order.postal_code + " " + @order.addressee + " " +  @order.address %>
     </div>
   </div>
   
@@ -41,16 +45,16 @@
   <div class="row form-inline">
     <div class="col-9">
       <table class="table table-bordered">
-        <th class="table-secondary">
+        <th class="table-active">
           商品
         </th>
-        <th class="table-secondary">
+        <th class="table-active">
           単価（税込）
         </th>
-        <th class="table-secondary">
+        <th class="table-active">
           数量
         </th>
-        <th class="table-secondary">
+        <th class="table-active">
           小計
         </th>
         <% @order.order_details.each do |order_detail| %>
@@ -78,7 +82,7 @@
     <div class="col-3">
         <table class="table table-bordered">
           <tr>
-            <td class="table-secondary">
+            <td class="font-weight-bold">
               商品合計
             </td>
             <td>
@@ -86,7 +90,7 @@
             </td>
           </tr>
           <tr>
-             <td class="table-secondary">
+             <td class="font-weight-bold">
               送料
             </td>
             <td>
@@ -94,10 +98,10 @@
             </td>
           </tr>
           <tr>
-             <td class="table-secondary">
+             <td class="font-weight-bold">
               請求金額合計
             </td>
-            <td>
+            <td class="font-weight-bold">
               <%= @order.amount_claimed.to_s(:delimited) %>円
             </td>
           </tr>
