--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -68,13 +68,11 @@
 
   <div class="row m-2">
     <div class="actions mx-auto">
-      <%= f.submit "編集内容を保存" %>
+      <%= f.submit "編集内容を保存", class:"btn btn-success" %>
     </div>
     
     <div>
-      <button type="button" class="btn btn-danger m-2">
-        <%= link_to "退会する", public_unsubscribe_path, class:"text-light" %>
-      </button>
+        <%= link_to "退会する", public_unsubscribe_path, class:"btn btn-danger" %>
     </div>
   </div>
 <% end %>
