--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,12 +1,17 @@
-<div class="d-flex align-items-center justify-content-center">
+<div class="d-flex align-items-center justify-content-center" style="height:100px;">
   <strong>本当に退会しますか</strong>
 </div>
 
-<div class="d-flex align-items-center justify-content-center">
-  <p>退会すると、会員登録情報や</p>
-  <p>これまでの購入履歴が閲覧できなくなります。</p>
-  <p>退会する場合は、「退会する」をクリックしてください。</p>
+<div class="row m-4">
+    <div class="col-12">
+      <p class="text-center">
+        退会すると、会員登録情報や<br>
+        これまでの購入履歴が閲覧できなくなります。<br>
+        退会する場合は、「退会する」をクリックしてください。
+      </p>
+    </div>
 </div>
+
 <div class="d-flex align-items-center justify-content-center">
   <div>
     <button type="button" class="btn btn-primary m-2">
