--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,8 +1,21 @@
-<h1>About</h1>
-<p>
-  ながのCAKEは全国発送可能なケーキ屋さんです。<br/>
-  お子様からお年寄りの方までお召し上がりいただけるよう、<br/>
-  様々なバリエーションをご用意しております。<br/>
-  また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます<br/>
-  ぜひご注文ください。
-</p>
+<div class="container">
+  
+  <div class="row">
+    <div class="col-6 offset-4">
+      <h1 style="font-size:100px;">About</h1>
+    </div>
+  </div>
+  
+  <div class="row m-4">
+    <div class="col-12">
+      <p class="text-center", style="font-size:24px;">
+        ながのCAKEは全国発送可能なケーキ屋さんです。<br/>
+        お子様からお年寄りの方までお召し上がりいただけるよう、<br/>
+        様々なバリエーションをご用意しております。<br/>
+        また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます<br/>
+        ぜひご注文ください。
+      </p>
+    </div>
+  </div>
+
+</div>
