--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,3 +1,5 @@
-<div class="m-auto">
-  ご注文ありがとうございました。
-</div>
+ <div class="container">
+    <div class="d-flex align-items-center justify-content-center" style="font-size:32px; height:300px;">
+      ご注文ありがとうございました！
+    </div>
+ </div>
