--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,8 +1,18 @@
 <div class="container">
-  <h4 class="ml-4">注文情報入力</h4>
-  <h5><strong>支払方法</strong></h5>
-  <%= form_with model: @order, url: public_orders_confirm_path do |f| %>
+  
+  <div class="row m-2">
     <div>
+      <h4 class="ml-4">注文情報入力</h4>
+    </div>
+  </div>
+  
+  <div class="row m-2">
+    <h5><strong>支払方法</strong></h5>
+  </div>
+  
+  
+  <%= form_with model: @order, url: public_orders_confirm_path do |f| %>
+    <div class="offset-1">
       <div>
         <%= f.radio_button :payment, Order.payments.key(1) %>
         <%= f.label :payment, Order.payments_i18n[:credit_card] %>
@@ -13,52 +23,62 @@
       </div>
     </div>
 
-    <div>
-      <h5><strong>お届け先</strong></h5>
+    <div class="row m-2">
       <div>
+        <h5><strong>お届け先</strong></h5>
+      </div>
+    </div>
+    
+      <div class="offset-1">
         <%= f.radio_button :address_select, 0 %>
         <%= f.label :address, "ご自身の住所"  %>
         <%= '〒' + current_customer.postal_code + ' ' + current_customer.address + ' ' + current_customer.last_name + current_customer.first_name %>
 
       </div>
-      <div>
+      <div class="offset-1">
         <%= f.radio_button :address_select, 1 %>
         <%= f.label :adress, "登録済住所から選択" %>
-        <div>
-          <%= f.select :address_id, options_from_collection_for_select(Adress.all, :id, :address_display) %>
+        <div class="offset-1">
+          <%= f.select :address_id, options_from_collection_for_select(current_customer.adresses, :id, :address_display) %>
         </div>
       </div>
-      <div>
+      <div class="offset-1">
         <%= f.radio_button :address_select, 2 %>
         <%= f.label :adress, "新しいお届け先" %>
       </div>
-      <div class="form-inline">
-        <div>
+      
+      <div class=" row form-inline m-2">
+        <div class="col-3 offset-1">
           <%= f.label :郵便番号（ハイフンなし） %>
         </div>
-        <div>
+        <div class="col-3">
           <%= f.text_field :postal_code, placeholder: "0000000", accept: "postal_code" %>
         </div>
       </div>
 
-    <div class="form-inline">
-      <div>
-        <%= f.label :住所 %>
+      <div class="row form-inline m-2">
+        <div class="col-3 offset-1">
+          <%= f.label :住所 %>
+        </div>
+        <div class="col-6">
+          <%= f.text_field :addressee, placeholder: "東京都渋谷区代々木神園町0-0", accept: "addressee", style: "width: 100%;" %>
+        </div>
       </div>
-      <div>
-        <%= f.text_field :addressee, placeholder: "東京都渋谷区代々木神園町0-0", accept: "addressee", style: "width: 100%;" %>
+  
+      <div class="row form-inline m-2">
+        <div class="col-3 offset-1">
+          <%= f.label :宛名 %>
+        </div>
+        <div class="col-3">
+          <%= f.text_field :address, placeholder: "令和道子", accept: "address" %>
+        </div>
       </div>
-    </div>
-
-    <div class="form-inline">
-      <div>
-        <%= f.label :宛名 %>
+      
+      <div class="row m-2">
+        <div class="col-3 offset-5">
+          <%= f.submit "確認画面へ進む", class:"btn-primary" %>
+        </div>
       </div>
-      <div>
-        <%= f.text_field :address, placeholder: "令和道子", accept: "address" %>
-      </div>
-      </div>
-    </div>
-    <%= f.submit "確認画面へ進む", class:"btn-primary" %>
+      
   <% end %>
 </div>
