--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -21,7 +21,7 @@
       
       <div class="col-6 offset-3 bordered">
         ようこそ、ながのCAKEへ！<br>
-        このさいとは、ケーキ販売のECサイトになります。<br>
+        このサイトは、ケーキ販売のECサイトになります。<br>
         会員でない方も商品の閲覧はできますが、<br>
         購入には会員登録が必要になります。
       </div>
@@ -62,15 +62,5 @@
       </div>
     </div>
     </div>
-    
-    
-
-      
-  
-  
-  
-  
-  
-  
   
   </div>
