--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -68,12 +68,13 @@
   </div>
   <div class="row">
     <div class="col-3 offset-5">
-      <% if @cart_items== nil? %>
-        <p>カートが空です</p>
-      <% else %>
+      
+      <% if @cart_items.first %>
         <%= link_to "情報入力に進む", new_public_order_path,class:"btn btn-success" %>
+      <% else %>
+        
       <% end %>
     </div>
-    
+
   </div>
 </div>
